Closed Bug 1944998 Opened 10 months ago Closed 10 months ago

Mica breaks transparency of non-native alerts.

Categories

(Core :: Widget: Win32, defect)

defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox136 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

A bit similar to bug 1934140 and probably should be fixed together.

We're asking windows to draw a backdrop unconditionally, which makes the notifications opaque.

I guess we need some opt-in into the mica backdrop.

Flags: needinfo?(emilio)
Blocks: 1934140

Otherwise windows we want to be fully transparent get a backdrop, or
windows that don't have a tab list get the wrong backdrop (bug 1934140).

Assignee: nobody → emilio
Status: NEW → ASSIGNED

Otherwise windows we want to be fully transparent get a backdrop, or
windows that don't have a tab list get the wrong backdrop (bug 1934140).

Attachment #9463171 - Attachment is obsolete: true
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/84c5a2d05038 Explicitly opt in per window to mica backdrop. r=desktop-theme-reviewers,dao
Flags: needinfo?(emilio)
Duplicate of this bug: 1934140
Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
Blocks: 1945368
No longer blocks: 1934140
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: