Bug 1944998 - Explicitly opt in per window to mica backdrop. r=desktop-theme-reviewers,dao

Otherwise windows we want to be fully transparent get a backdrop, or
windows that don't have a tab list get the wrong backdrop (bug 1934140).

Differential Revision: https://phabricator.services.mozilla.com/D236372