dom/xul/ChromeObserver.cpp
@@ -91,6 +91,8 @@ void ChromeObserver::AttributeChanged(dom::Element* aElement,
       SetCustomTitlebar(added);
     } else if (aName == nsGkAtoms::drawtitle) {
       SetDrawsTitle(added);
+    } else if (aName == nsGkAtoms::windowsmica) {
+      SetMica(added);
     }
   }
   if (aName == nsGkAtoms::localedir) {
@@ -106,6 +108,12 @@ void ChromeObserver::AttributeChanged(dom::Element* aElement,
 
 void ChromeObserver::NodeWillBeDestroyed(nsINode* aNode) {
   mDocument = nullptr;
+}
+
+void ChromeObserver::SetMica(bool aEnable) {
+  if (nsIWidget* mainWidget = GetWindowWidget()) {
+    mainWidget->SetMicaBackdrop(aEnable);
+  }
 }
 
 void ChromeObserver::SetCustomTitlebar(bool aCustomTitlebar) {
