widget/windows/nsWindow.h
@@ -648,6 +648,7 @@ class nsWindow final : public nsBaseWidget {
   }
 
   void SetColorScheme(const mozilla::Maybe<mozilla::ColorScheme>&) override;
+  void SetMicaBackdrop(bool) override;
 
   bool DispatchTouchEventFromWMPointer(UINT msg, LPARAM aLParam,
                                        const WinPointerInfo& aPointerInfo,
